added files to gh-pages

--- a/index.html
+++ b/index.html
@@ -1,79 +1,91 @@
 <!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Say-no-to-js : There are some plugins with HTML&amp;CSS">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Say-no-to-js</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/vvasilik/say-NO-to-JS">View on GitHub</a>
-
-          <h1 id="project_title">Say-no-to-js</h1>
-          <h2 id="project_tagline">There are some plugins with HTML&amp;CSS</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/vvasilik/say-NO-to-JS/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/vvasilik/say-NO-to-JS/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta charset="utf-8">
+	<title>say NO to JS</title>
+	<link rel="stylesheet" type="text/css" href="css/all.css" />
+</head>
+<body>
+    <div class="h-wrapper">
+        <!--accordion-->
+        <h2 class="b-wrapper__title">Accordion</h2>
+        <div class="b-accordion">
+            <div class="b-accordion__example">
+                <h3 class="b-accordion__title">
+                    <div class="b-accordion__title__right">
+                        <label for="b-accordion__label__clear">uncheck all</label>
+                        <input type="radio" id="b-accordion__label__clear" name="b-accordion__label"/>
+                    </div>
+                    Only one
+                </h3>
+                <label class="b-accordion__label" for="b-accordion_1">b-accordion_1</label>
+                <input type="radio" name="b-accordion__label" id="b-accordion_1" class="b-accordion__radio" checked="checked"/>
+                <div class="b-accordion__box">
+                    <p>«Аполлон-17» (англ. Apollo 17) — 11-й и последний пилотируемый полёт в рамках программы «Аполлон», в ходе которого была осуществлена шестая высадка людей на Луну. Это была третья Джей-миссия (англ. J-mission) с акцентом на научные исследования. В экипаж корабля впервые вошёл учёный-профессионал, геолог Харрисон Шмитт. В распоряжении астронавтов так же, как и в ходе двух предшествовавших экспедиций, был лунный автомобиль, «Лунный Ровер» № 3. Командно-служебный модуль «Аполлона-17» имел позывные «Америка», лунный модуль — «Челленджер».</p>
+                </div>
+                <label class="b-accordion__label" for="b-accordion_2">b-accordion_2</label>
+                <input type="radio" name="b-accordion__label" id="b-accordion_2" class="b-accordion__radio"/>
+                <div class="b-accordion__box">
+                    <p>Старт «Аполлона-17» состоялся с задержкой на 2 часа 40 минут 7 декабря 1972 года. Задержка старта впервые была вызвана неисправностью стартового оборудования. На тот момент это был первый ночной запуск в истории пилотируемой космической программы США.</p>
+                </div>
+                <label class="b-accordion__label" for="b-accordion_3">b-accordion_3</label>
+                <input type="radio" name="b-accordion__label" id="b-accordion_3" class="b-accordion__radio"/>
+                <div class="b-accordion__box">
+                    <p>11 декабря 1972 года «Челленджер» с Юджином Сернаном и Харрисоном Шмиттом на борту совершил посадку в долине Таурус—Литтров, на юго-восточной окраине Моря Ясности. Астронавты оставались на Луне чуть более трёх суток, 74 часа 59 минут 40 секунд. За это время они совершили три выхода из корабля общей продолжительностью 22 часа 3 минуты 57 секунд. Было собрано и привезено на Землю 110,5 кг образцов лунной породы.</p>
+                </div>
+            </div>
+            <div class="b-accordion__example">
+                <h3 class="b-accordion__title">Anyone</h3>
+                <label class="b-accordion__label" for="b-accordion_4">b-accordion_4</label>
+                <input type="checkbox" id="b-accordion_4" class="b-accordion__radio" checked="checked"/>
+                <div class="b-accordion__box">
+                    <p>«Аполлон-17» (англ. Apollo 17) — 11-й и последний пилотируемый полёт в рамках программы «Аполлон», в ходе которого была осуществлена шестая высадка людей на Луну. Это была третья Джей-миссия (англ. J-mission) с акцентом на научные исследования. В экипаж корабля впервые вошёл учёный-профессионал, геолог Харрисон Шмитт. В распоряжении астронавтов так же, как и в ходе двух предшествовавших экспедиций, был лунный автомобиль, «Лунный Ровер» № 3. Командно-служебный модуль «Аполлона-17» имел позывные «Америка», лунный модуль — «Челленджер».</p>
+                </div>
+                <label class="b-accordion__label" for="b-accordion_5">b-accordion_5</label>
+                <input type="checkbox" id="b-accordion_5" class="b-accordion__radio"/>
+                <div class="b-accordion__box">
+                    <p>Старт «Аполлона-17» состоялся с задержкой на 2 часа 40 минут 7 декабря 1972 года. Задержка старта впервые была вызвана неисправностью стартового оборудования. На тот момент это был первый ночной запуск в истории пилотируемой космической программы США.</p>
+                </div>
+                <label class="b-accordion__label" for="b-accordion_6">b-accordion_6</label>
+                <input type="checkbox" id="b-accordion_6" class="b-accordion__radio"/>
+                <div class="b-accordion__box">
+                    <p>11 декабря 1972 года «Челленджер» с Юджином Сернаном и Харрисоном Шмиттом на борту совершил посадку в долине Таурус—Литтров, на юго-восточной окраине Моря Ясности. Астронавты оставались на Луне чуть более трёх суток, 74 часа 59 минут 40 секунд. За это время они совершили три выхода из корабля общей продолжительностью 22 часа 3 минуты 57 секунд. Было собрано и привезено на Землю 110,5 кг образцов лунной породы.</p>
+                </div>
+            </div>
+        </div>
+        <!------>
+        <!--tab-->
+        <h2 class="b-wrapper__title">Tab</h2>
+        <div class="b-tab">
+            <ul class="b-tab__nav">
+                <li class="b-tab__nav__frame">
+                    <label class="b-tab__nav__label" for="b-tab__nav__radio__1">b-tab__nav__1</label>
+                </li>
+                <li class="b-tab__nav__frame">
+                    <label class="b-tab__nav__label" for="b-tab__nav__radio__2">b-tab__nav__2</label>
+                </li>
+                <li class="b-tab__nav__frame">
+                    <label class="b-tab__nav__label" for="b-tab__nav__radio__3">b-tab__nav__3</label>
+                </li>
+            </ul>
+            <div class="b-tab__nav__holder">
+                <input type="radio" class="b-tab__nav__radio" name="b-tab__nav__radio" id="b-tab__nav__radio__1" checked="checked"/>
+                <div class="b-tab__nav__box">
+                    <p>«Аполлон-17» (англ. Apollo 17) — 11-й и последний пилотируемый полёт в рамках программы «Аполлон», в ходе которого была осуществлена шестая высадка людей на Луну. Это была третья Джей-миссия (англ. J-mission) с акцентом на научные исследования. В экипаж корабля впервые вошёл учёный-профессионал, геолог Харрисон Шмитт. В распоряжении астронавтов так же, как и в ходе двух предшествовавших экспедиций, был лунный автомобиль, «Лунный Ровер» № 3. Командно-служебный модуль «Аполлона-17» имел позывные «Америка», лунный модуль — «Челленджер».</p>
+                    <span class="b-tab__active _first"></span>
+                </div>
+                <input type="radio" class="b-tab__nav__radio" name="b-tab__nav__radio" id="b-tab__nav__radio__2"/>
+                <div class="b-tab__nav__box">
+                    <p>Старт «Аполлона-17» состоялся с задержкой на 2 часа 40 минут 7 декабря 1972 года. Задержка старта впервые была вызвана неисправностью стартового оборудования. На тот момент это был первый ночной запуск в истории пилотируемой космической программы США.</p>
+                    <span class="b-tab__active _second"></span>
+                </div>
+                <input type="radio" class="b-tab__nav__radio" name="b-tab__nav__radio" id="b-tab__nav__radio__3"/>
+                <div class="b-tab__nav__box">
+                    <p>11 декабря 1972 года «Челленджер» с Юджином Сернаном и Харрисоном Шмиттом на борту совершил посадку в долине Таурус—Литтров, на юго-восточной окраине Моря Ясности. Астронавты оставались на Луне чуть более трёх суток, 74 часа 59 минут 40 секунд. За это время они совершили три выхода из корабля общей продолжительностью 22 часа 3 минуты 57 секунд. Было собрано и привезено на Землю 110,5 кг образцов лунной породы.</p>
+                    <span class="b-tab__active _third"></span>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Say-no-to-js maintained by <a href="https://github.com/vvasilik">vvasilik</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
