--- a/index.html
+++ b/index.html
@@ -86,6 +86,47 @@
                 </div>
             </div>
         </div>
+        <!------>
+        <!--carousel-->
+        <h2 class="b-wrapper__title">Carousel</h2>
+        <div class="b-carousel">
+            <div class="b-carousel__mask">
+
+                <input name="b-carousel" id="b-carousel__1" checked="checked" type="radio" class="b-carousel__check"/>
+                <div class="b-carousel__box">
+                    <img class="b-carousel__img" src="images/400x900.jpg" alt="image description"/>
+                    <label class="b-carousel__label _next" for="b-carousel__2">></label>
+                </div>
+
+                <input name="b-carousel" id="b-carousel__2" type="radio" class="b-carousel__check"/>
+                <div class="b-carousel__box">
+                    <label class="b-carousel__label _prev" for="b-carousel__1"><</label>
+                    <img class="b-carousel__img" src="images/900x400.jpg" alt="image description"/>
+                    <label class="b-carousel__label _next" for="b-carousel__3">></label>
+                </div>
+
+                <input name="b-carousel" id="b-carousel__3" type="radio" class="b-carousel__check"/>
+                <div class="b-carousel__box">
+                    <label class="b-carousel__label _prev" for="b-carousel__2"><</label>
+                    <img class="b-carousel__img" src="images/500x500.jpg" alt="image description"/>
+                    <label class="b-carousel__label _next" for="b-carousel__4">></label>
+                </div>
+
+                <input name="b-carousel" id="b-carousel__4" type="radio" class="b-carousel__check"/>
+                <div class="b-carousel__box">
+                    <label class="b-carousel__label _prev" for="b-carousel__3"><</label>
+                    <img class="b-carousel__img" src="images/900x400.jpg" alt="image description"/>
+                    <label class="b-carousel__label _next" for="b-carousel__5">></label>
+                </div>
+
+                <input name="b-carousel" id="b-carousel__5" type="radio" class="b-carousel__check"/>
+                <div class="b-carousel__box">
+                    <label class="b-carousel__label _prev" for="b-carousel__4"><</label>
+                    <img class="b-carousel__img" src="images/400x900.jpg" alt="image description"/>
+                </div>
+            </div>
+        </div>
+        <!------>
     </div>
 </body>
 </html>
