--- a/index.html
+++ b/index.html
@@ -127,6 +127,46 @@
             </div>
         </div>
         <!------>
+        <!--zoom-->
+        <h2 class="b-wrapper__title">Lightbox</h2>
+        <div class="b-zoom">
+            <ul class="b-zoom__list">
+                <li class="b-zoom__list__frame">
+                    <label class="b-zoom__label" for="b-zoom__label__1">
+                        <img class="b-zoom__img" src="images/400x900.jpg" alt="image description"/>
+                    </label>
+                </li>
+                <li class="b-zoom__list__frame">
+                    <label class="b-zoom__label" for="b-zoom__label__2">
+                        <img class="b-zoom__img" src="images/500x500.jpg" alt="image description"/>
+                    </label>
+                </li>
+                <li class="b-zoom__list__frame">
+                    <label class="b-zoom__label" for="b-zoom__label__3">
+                        <img class="b-zoom__img" src="images/900x400.jpg" alt="image description"/>
+                    </label>
+                </li>
+            </ul>
+            <div class="b-zoom__preview">
+                <input name="b-zoom__list" id="b-zoom__label__1" type="radio" class="b-zoom__radio"/>
+                <div class="b-zoom__preview__holder">
+                    <img class="b-zoom__large__img" src="images/400x900.jpg" alt="image description"/>
+                    <label class="b-zoom__preview__close__label" for="b-zoom__preview__close">x</label>
+                </div>
+                <input name="b-zoom__list" id="b-zoom__label__2" type="radio" class="b-zoom__radio"/>
+                <div class="b-zoom__preview__holder">
+                    <img class="b-zoom__large__img" src="images/500x500.jpg" alt="image description"/>
+                    <label class="b-zoom__preview__close__label" for="b-zoom__preview__close">x</label>
+                </div>
+                <input name="b-zoom__list" id="b-zoom__label__3" type="radio" class="b-zoom__radio"/>
+                <div class="b-zoom__preview__holder">
+                    <img class="b-zoom__large__img" src="images/900x400.jpg" alt="image description"/>
+                    <label class="b-zoom__preview__close__label" for="b-zoom__preview__close">x</label>
+                </div>
+                <input id="b-zoom__preview__close" name="b-zoom__list" type="radio" class="b-zoom__preview__close"/>
+            </div>
+        </div>
+        <!------>
     </div>
 </body>
 </html>
