add viewport attr

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="utf-8">
-	<title>say NO to JS</title>
+    <title>say NO to JS</title>
+    <meta name="viewport" content="width=device-widt, maximum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/all.css" />
 </head>
 <body>
